Bug 219895 - Completed to-do not recorded in journal
Summary: Completed to-do not recorded in journal
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-24 00:14 UTC by Dmitry Samoyloff
Modified: 2010-05-02 04:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Samoyloff 2009-12-24 00:14:35 UTC
Version:            (using KDE 4.3.4)
Compiler:           gcc version 4.3.4 (Gentoo 4.3.4 p1.0, pie-10.1.5)
OS:                Linux
Installed from:    Gentoo Packages

Completed to-do wouldn't be added into journal if it was marked as complete by setting it's completeness to 100% in task's properties dialog.

How to Reproduce:

* Set the following checkbox in settings:
  Settings ->
    Configure KOrganizer ->
      Appearance? (sorry, it showing up in Russian) ->
        Todo View ->
          Record completed to-dos in journal entries.
  Press OK.

* Double-click to-do item and set it's completeness to 100%, then press OK.

* It wasn't added into journal.
Comment 1 Sabine Faure 2010-04-30 00:51:44 UTC
I can reproduce that bug too using pretty much the same steps:

- Launch KOrg
- Create a new to-do due today at 14:00
- The new to-do should be displayed correctly in agenda view
- Go to Settings menu/Configure KOrganizer...
- Click on 'Views' icon and go to 'Todo View' tab
- Check the 'Record completed to-dos in journal entries check box
- Click on 'ok'
- Click on To-do List button and check the check box of the to-do you created to show that it's completed
- Click on 'Journal' button

No journal entry was created to record the completed to-do on today or any other day.

So I am guessing that this functionality is not yet implemented.

Version 4.5 - Trunk, Svn Rev 1120671
Comment 2 Dmitry Samoyloff 2010-04-30 17:43:47 UTC
>I can reproduce that bug too using pretty much the same steps:

Not exactly the same, I set completness to 100% in to-do's properties (double-click the to-do item), you set it in the agenda's checkbox.

>- Click on To-do List button and check the check box of the to-do you created to show that it's completed
>- Click on 'Journal' button
>
>No journal entry was created to record the completed to-do on today or any
>other day.

That's strange, simply checking the box works for me.

>Version 4.5 - Trunk, Svn Rev 1120671

Version 4.4.2 from the Gentoo portage. Maybe this feature is completely broken in the trunk at the moment.
Comment 3 Sergio Martins 2010-05-01 23:14:41 UTC
SVN commit 1121591 by smartins:

Emit a real WhatChanged action.

CCBUG: 219895


 M  +7 -2      incidencechanger.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121591
Comment 4 Sergio Martins 2010-05-02 02:56:47 UTC
SVN commit 1121650 by smartins:

When setting a to-do 100% completed, use the COMPLETION_MODIFIED action, so a journal is created when setting completion through the dialogs, and not only through the to-do view.

The dialog to choose the collection appears, so i'm not closing this bug yet. It should use the same collection as the to-do's.

CCBUG: 219895


 M  +10 -1     kotodoeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121650
Comment 5 Sergio Martins 2010-05-02 04:17:27 UTC
SVN commit 1121667 by smartins:

Only create the journal after the modify job on the to-do has ended.

CCBUG:219895

MERGE: none


 M  +4 -1      calendarview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121667
Comment 6 Sergio Martins 2010-05-02 04:32:03 UTC
SVN commit 1121669 by smartins:

Backport r1121650 by smartins from trunk to branch 4.4:

When setting a to-do 100% completed, use the COMPLETION_MODIFIED action, so a journal is created when setting completion through the dialogs, and not only through the to-do view.

The dialog to choose the collection appears, so i'm not closing this bug yet. It should use the same collection as the to-do's.

BUG: 219895


 M  +10 -1     kotodoeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121669
Comment 7 Sergio Martins 2010-05-02 04:33:51 UTC
Fixed. Will be in 4.4.4.