Backport r1121650 by smartins from trunk to branch 4.4:

When setting a to-do 100% completed, use the COMPLETION_MODIFIED action, so a journal is created when setting completion through the dialogs, and not only through the to-do view.

The dialog to choose the collection appears, so i'm not closing this bug yet. It should use the same collection as the to-do's.

BUG: 219895

svn path=/branches/KDE/4.4/kdepim/; revision=1121669